Add option for html minification

--- a/src/MintPlayer.AspNetCore.ServerSideRendering.csproj.in
+++ b/src/MintPlayer.AspNetCore.ServerSideRendering.csproj.in
@@ -23,6 +23,9 @@
 		<PackageReference Include="MintPlayer.AspNetCore.Hsts" Version="6.0.0" />
 		<PackageReference Include="MintPlayer.AspNetCore.SpaServices.Routing" Version="6.1.3" />
 		<PackageReference Include="MintPlayer.AspNetCore.SubDirectoryViews" Version="6.0.1" />
+<!--#if (UseHtmlMinification) -->
+		<PackageReference Include="WebMarkupMin.AspNetCore6" Version="2.12.0" />
+<!--#endif -->
 	</ItemGroup>
 
 	<Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
