--- a/src/content/Application/Web/ClientApp/package.json
+++ b/src/content/Application/Web/ClientApp/package.json
@@ -10,35 +10,35 @@
 	},
 	"private": true,
 	"dependencies": {
-		"@angular/animations": "^14.0.0",
-		"@angular/common": "^14.0.0",
-		"@angular/compiler": "^14.0.0",
-		"@angular/core": "^14.0.0",
-		"@angular/forms": "^14.0.0",
-		"@angular/platform-browser": "^14.0.0",
-		"@angular/platform-browser-dynamic": "^14.0.0",
-		"@angular/router": "^14.0.0",
-		"@mintplayer/ng-base-url": "^14.0.0",
-		"@mintplayer/ng-bootstrap": "^14.0.0",
-		"@mintplayer/ng-router": "^14.0.0",
-		"@ngxs/store": "^3.7.4",
+		"@angular/animations": "~14.2.0",
+		"@angular/common": "~14.2.0",
+		"@angular/compiler": "~14.2.0",
+		"@angular/core": "~14.2.0",
+		"@angular/forms": "~14.2.0",
+		"@angular/platform-browser": "~14.2.0",
+		"@angular/platform-browser-dynamic": "~14.2.0",
+		"@angular/router": "~14.2.0",
+		"@mintplayer/ng-base-url": "~14.3.0",
+		"@mintplayer/ng-bootstrap": "~14.5.0",
+		"@mintplayer/ng-router": "~14.2.0",
+		"@ngxs/store": "~3.7.5",
 		"guid-typescript": "^1.0.9",
-		"rxjs": "~7.5.0",
-		"rxjs-compat": "^6.6.7",
+		"rxjs": "~7.5.6",
+		"rxjs-compat": "~6.6.7",
 		"tslib": "^2.3.0",
 		"zone.js": "~0.11.4"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "^14.0.2",
-		"@angular/cli": "~14.0.2",
-		"@angular/compiler-cli": "^14.0.0",
-		"@types/jasmine": "~4.0.0",
-		"jasmine-core": "~4.1.0",
-		"karma": "~6.3.0",
-		"karma-chrome-launcher": "~3.1.0",
+		"@angular-devkit/build-angular": "~14.2.1",
+		"@angular/cli": "~14.2.1",
+		"@angular/compiler-cli": "~14.2.0",
+		"@types/jasmine": "~4.3.0",
+		"jasmine-core": "~4.4.0",
+		"karma": "~6.4.0",
+		"karma-chrome-launcher": "~3.1.1",
 		"karma-coverage": "~2.2.0",
-		"karma-jasmine": "~5.0.0",
-		"karma-jasmine-html-reporter": "~1.7.0",
-		"typescript": "~4.7.2"
+		"karma-jasmine": "~5.1.0",
+		"karma-jasmine-html-reporter": "~2.0.0",
+		"typescript": "~4.8.2"
 	}
 }
