--- a/src/content/Application/Web/ClientApp/angular.json
+++ b/src/content/Application/Web/ClientApp/angular.json
@@ -17,7 +17,7 @@
 				"build": {
 					"builder": "@angular-devkit/build-angular:browser",
 					"options": {
-						"outputPath": "dist/client-app",
+						"outputPath": "dist",
 						"index": "src/index.html",
 						"main": "src/main.ts",
 						"polyfills": "src/polyfills.ts",
@@ -102,6 +102,67 @@
 						],
 						"scripts": []
 					}
+////#if (UseServerSideRendering)
+//			},
+//			"server": {
+//				"builder": "@angular-devkit/build-angular:server",
+//				"options": {
+//					"outputPath": "dist/ClientApp/server",
+//					"main": "src/main.server.ts",
+//					"tsConfig": "tsconfig.server.json",
+//					"inlineStyleLanguage": "scss"
+//				},
+//				"configurations": {
+//					"production": {
+//						"outputHashing": "media",
+//						"fileReplacements": [
+//							{
+//								"replace": "src/environments/environment.ts",
+//								"with": "src/environments/environment.prod.ts"
+//							}
+//						]
+//					},
+//					"development": {
+//						"optimization": false,
+//						"sourceMap": true,
+//						"extractLicenses": false
+//					}
+//				},
+//				"defaultConfiguration": "production"
+//			},
+//			"serve-ssr": {
+//				"builder": "@nguniversal/builders:ssr-dev-server",
+//				"configurations": {
+//					"development": {
+//						"browserTarget": "ClientApp:build:development",
+//						"serverTarget": "ClientApp:server:development"
+//					},
+//					"production": {
+//						"browserTarget": "ClientApp:build:production",
+//						"serverTarget": "ClientApp:server:production"
+//					}
+//				},
+//				"defaultConfiguration": "development"
+//			},
+//			"prerender": {
+//				"builder": "@nguniversal/builders:prerender",
+//				"options": {
+//					"routes": [
+//						"/"
+//					]
+//				},
+//				"configurations": {
+//					"production": {
+//						"browserTarget": "ClientApp:build:production",
+//						"serverTarget": "ClientApp:server:production"
+//					},
+//					"development": {
+//						"browserTarget": "ClientApp:build:development",
+//						"serverTarget": "ClientApp:server:development"
+//					}
+//				},
+//				"defaultConfiguration": "production"
+////#endif
 				}
 			}
 		}
