--- a/src/content/Application/Web/ClientApp/tsconfig.server.json
+++ b/src/content/Application/Web/ClientApp/tsconfig.server.json
@@ -3,7 +3,7 @@
 	"extends": "./tsconfig.app.json",
 	"compilerOptions": {
 		"outDir": "./out-tsc/server",
-		"target": "es2019",
+		"module": "commonjs",
 		"types": [
 			"node"
 		]
