--- a/src/content/IdentityProvider/Web/ClientApp/package.json
+++ b/src/content/IdentityProvider/Web/ClientApp/package.json
@@ -18,7 +18,7 @@
 		"@angular/platform-browser": "^14.2.0",
 		"@angular/platform-browser-dynamic": "^14.2.0",
 		"@angular/router": "^14.2.0",
-		"@mintplayer/ng-base-url": "^14.3.0",
+		"@mintplayer/ng-base-url": "~14.3.0",
 		"@mintplayer/ng-bootstrap": "~14.5.0",
 		"@mintplayer/ng-qr-code": "~14.3.0",
 		"@mintplayer/ng-router": "~14.2.0",
