Exclude data_from_server

--- a/src/content/Application/Web/ClientApp/angular.json
+++ b/src/content/Application/Web/ClientApp/angular.json
@@ -45,6 +45,7 @@
 					},
 					"configurations": {
 						"production": {
+							"subresourceIntegrity": true,
 							"budgets": [
 								{
 									"type": "initial",
