Add choices to templates

--- a/src/content/IdentityProvider/Web/appsettings.Development.json
+++ b/src/content/IdentityProvider/Web/appsettings.Development.json
@@ -10,8 +10,11 @@
 		"MintPlayer.AspNetCore.IdentityServer": "Server=(localdb)\\mssqllocaldb;Database=MintPlayer.AspNetCore.IdentityServer;Trusted_Connection=True;ConnectRetryCount=0"
 	},
 	"Account": {
+//#if(UseEmailConfirmation)
 		"RequireEmailConfirmation": false
+//#endif
 	},
+//#if(UseExternalLogins)
 	"Authentication": {
 		"Google": {
 			"ClientId": "",
@@ -34,6 +37,7 @@
 			"ClientSecret": ""
 		}
 	},
+//#endif
 	"Mail": {
 		"SmtpHost": "",
 		"SmtpPort": 587,
