--- a/src/content/Application/Web/ClientApp/package.json.in
+++ b/src/content/Application/Web/ClientApp/package.json.in
@@ -16,50 +16,50 @@
 	},
 	"private": true,
 	"dependencies": {
-		"@angular/animations": "~14.2.0",
-		"@angular/common": "~14.2.0",
-		"@angular/compiler": "~14.2.0",
-		"@angular/core": "~14.2.0",
-		"@angular/forms": "~14.2.0",
-		"@angular/platform-browser": "~14.2.0",
-		"@angular/platform-browser-dynamic": "~14.2.0",
+		"@angular/animations": "~15.0.0",
+		"@angular/common": "~15.0.0",
+		"@angular/compiler": "~15.0.0",
+		"@angular/core": "~15.0.0",
+		"@angular/forms": "~15.0.0",
+		"@angular/platform-browser": "~15.0.0",
+		"@angular/platform-browser-dynamic": "~15.0.0",
 //#if(UseServerSideRendering)
-		"@angular/platform-server": "~14.2.0",
+		"@angular/platform-server": "~15.0.0",
 //#endif
-		"@angular/router": "~14.2.0",
+		"@angular/router": "~15.0.0",
 //#if(UsePwa)
-		"@angular/service-worker": "~14.2.0",
+		"@angular/service-worker": "~15.0.0",
 //#endif
-		"@mintplayer/ng-base-url": "~14.3.0",
-		"@mintplayer/ng-bootstrap": "~14.5.0",
-		"@mintplayer/ng-router": "~14.2.0",
+		"@mintplayer/ng-base-url": "~15.0.0",
+		"@mintplayer/ng-bootstrap": "~15.12.0",
+		"@mintplayer/ng-router": "~15.0.0",
 //#if(UseServerSideRendering)
-		"@nguniversal/express-engine": "^14.1.0",
+		"@nguniversal/express-engine": "~15.0.0",
 //#endif
-		"@ngxs/store": "~3.7.5",
+		"@ngxs/store": "~3.7.6",
 //#if(UseServerSideRendering)
 		"aspnet-prerendering": "^3.0.1",
 		"express": "^4.15.2",
 //#endif
 		"guid-typescript": "^1.0.9",
-		"rxjs": "~7.5.6",
+		"rxjs": "~7.5.0",
 		"rxjs-compat": "~6.6.7",
 		"tslib": "^2.3.0",
-		"zone.js": "~0.11.4"
+		"zone.js": "~0.12.0"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "~14.2.1",
-		"@angular/cli": "~14.2.1",
-		"@angular/compiler-cli": "~14.2.0",
+		"@angular-devkit/build-angular": "~15.0.4",
+		"@angular/cli": "~15.0.4",
+		"@angular/compiler-cli": "~15.0.4",
 //#if(UseServerSideRendering)
-		"@nguniversal/builders": "^14.1.0",
+		"@nguniversal/builders": "~15.0.0",
 		"@types/express": "^4.17.0",
 //#endif
 		"@types/jasmine": "~4.3.0",
 //#if(UseServerSideRendering)
 		"@types/node": "^14.15.0",
 //#endif
-		"jasmine-core": "~4.4.0",
+		"jasmine-core": "~4.5.0",
 		"karma": "~6.4.0",
 		"karma-chrome-launcher": "~3.1.1",
 		"karma-coverage": "~2.2.0",
