--- a/src/content/ServerSideRendering/MintPlayer.AspNetCore.ServerSideRendering/ClientApp/package.json
+++ b/src/content/ServerSideRendering/MintPlayer.AspNetCore.ServerSideRendering/ClientApp/package.json
@@ -14,33 +14,34 @@
 	},
 	"private": true,
 	"dependencies": {
-		"@angular/animations": "^14.2.0",
-		"@angular/common": "^14.2.0",
-		"@angular/compiler": "^14.2.0",
-		"@angular/core": "^14.2.0",
-		"@angular/forms": "^14.2.0",
-		"@angular/platform-browser": "^14.2.0",
-		"@angular/platform-browser-dynamic": "^14.2.0",
-		"@angular/platform-server": "^14.2.0",
-		"@angular/router": "^14.2.0",
-		"@mintplayer/ng-base-url": "^14.3.0",
-		"@mintplayer/ng-bootstrap": "^14.5.0",
-		"@nguniversal/express-engine": "^14.1.0",
+		"@angular/animations": "~15.0.0",
+		"@angular/common": "~15.0.0",
+		"@angular/compiler": "~15.0.0",
+		"@angular/core": "~15.0.0",
+		"@angular/forms": "~15.0.0",
+		"@angular/platform-browser": "~15.0.0",
+		"@angular/platform-browser-dynamic": "~15.0.0",
+		"@angular/platform-server": "~15.0.0",
+		"@angular/router": "~15.0.0",
+		"@angular/service-worker": "~15.0.0",
+		"@mintplayer/ng-base-url": "~15.0.0",
+		"@mintplayer/ng-bootstrap": "~15.12.0",
+		"@nguniversal/express-engine": "~15.0.0",
 		"aspnet-prerendering": "^3.0.1",
 		"express": "^4.15.2",
-		"rxjs": "~7.5.6",
+		"rxjs": "~7.5.0",
 		"tslib": "^2.3.0",
-		"zone.js": "~0.11.4"
+		"zone.js": "~0.12.0"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "^14.2.1",
-		"@angular/cli": "~14.2.0",
-		"@angular/compiler-cli": "^14.2.0",
-		"@nguniversal/builders": "^14.1.0",
+		"@angular-devkit/build-angular": "~15.0.4",
+		"@angular/cli": "~15.0.4",
+		"@angular/compiler-cli": "~15.0.4",
+		"@nguniversal/builders": "~15.0.0",
 		"@types/express": "^4.17.0",
 		"@types/jasmine": "~4.3.0",
 		"@types/node": "^14.15.0",
-		"jasmine-core": "~4.4.0",
+		"jasmine-core": "~4.5.0",
 		"karma": "~6.4.0",
 		"karma-chrome-launcher": "~3.1.1",
 		"karma-coverage": "~2.2.0",
