--- a/src/content/IdentityProvider/Web/ClientApp/package.json
+++ b/src/content/IdentityProvider/Web/ClientApp/package.json
@@ -10,29 +10,29 @@
 	},
 	"private": true,
 	"dependencies": {
-		"@angular/animations": "^14.2.0",
-		"@angular/common": "^14.2.0",
-		"@angular/compiler": "^14.2.0",
-		"@angular/core": "^14.2.0",
-		"@angular/forms": "^14.2.0",
-		"@angular/platform-browser": "^14.2.0",
-		"@angular/platform-browser-dynamic": "^14.2.0",
-		"@angular/router": "^14.2.0",
-		"@mintplayer/ng-base-url": "~15.0.0",
-		"@mintplayer/ng-bootstrap": "~14.5.0",
-		"@mintplayer/ng-qr-code": "~14.3.0",
-		"@mintplayer/ng-router": "~14.2.0",
-		"@ngxs/store": "~3.7.5",
+		"@angular/animations": "~15.2.0",
+		"@angular/common": "~15.2.0",
+		"@angular/compiler": "~15.2.0",
+		"@angular/core": "~15.2.0",
+		"@angular/forms": "~15.2.0",
+		"@angular/platform-browser": "~15.2.0",
+		"@angular/platform-browser-dynamic": "~15.2.0",
+		"@angular/router": "~15.2.0",
+		"@mintplayer/ng-base-url": "~15.1.0",
+		"@mintplayer/ng-bootstrap": "~15.26.0",
+		"@mintplayer/ng-qr-code": "~15.3.0",
+		"@mintplayer/ng-router": "~15.2.0",
+		"@ngxs/store": "~3.8.0",
 		"font-awesome": "~4.7.0",
 		"guid-typescript": "^1.0.9",
-		"rxjs": "~7.5.6",
+		"rxjs": "~7.5.0",
 		"tslib": "^2.3.0",
-		"zone.js": "~0.11.4"
+		"zone.js": "~0.12.0"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "~14.2.1",
-		"@angular/cli": "~14.2.1",
-		"@angular/compiler-cli": "~14.2.0",
+		"@angular-devkit/build-angular": "~15.2.0",
+		"@angular/cli": "~15.2.0",
+		"@angular/compiler-cli": "~15.2.0",
 		"@types/jasmine": "~4.3.0",
 		"@types/qrcode": "^1.4.2",
 		"jasmine-core": "~4.4.0",
