--- a/src/MintPlayer.AspNetCore.ServerSideRendering.csproj.in
+++ b/src/MintPlayer.AspNetCore.ServerSideRendering.csproj.in
@@ -1,11 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
-		<TargetFramework>${DefaultNetCoreTargetFramework}</TargetFramework>
+		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<IsPackable>false</IsPackable>
 		<SpaRoot>ClientApp\</SpaRoot>
+		<PublishAot>true</PublishAot>
+		<InvariantGlobalization>true</InvariantGlobalization>
 
 		<!-- Set this to true if you enable server-side prerendering -->
 		<BuildServerSideRenderer>true</BuildServerSideRenderer>
@@ -19,12 +21,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="6.0.8" />
-		<PackageReference Include="MintPlayer.AspNetCore.Hsts" Version="6.0.0" />
-		<PackageReference Include="MintPlayer.AspNetCore.SpaServices.Routing" Version="7.0.2" />
-		<PackageReference Include="MintPlayer.AspNetCore.SubDirectoryViews" Version="6.0.1" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.1" />
+		<PackageReference Include="MintPlayer.AspNetCore.Hsts" Version="8.0.0" />
+		<PackageReference Include="MintPlayer.AspNetCore.SpaServices.Routing" Version="8.2.0" />
+		<PackageReference Include="MintPlayer.AspNetCore.SubDirectoryViews" Version="8.0.0" />
 <!--#if (UseHtmlMinification) -->
-		<PackageReference Include="WebMarkupMin.AspNetCore7" Version="2.13.9" />
+		<PackageReference Include="WebMarkupMin.AspNetCore8" Version="2.15.3" />
 <!--#endif -->
 	</ItemGroup>
 
@@ -41,14 +43,15 @@
 	<Target Name="PublishRunWebpack" AfterTargets="ComputeFilesToPublish">
 		<!-- As part of publishing, ensure the JS resources are freshly built in production mode -->
 		<Exec WorkingDirectory="$(SpaRoot)" Command="npm install" />
-		<Exec WorkingDirectory="$(SpaRoot)" Command="npm run build -- --prod" Condition=" '$(BuildServerSideRenderer)' == 'false' " />
+		<Exec WorkingDirectory="$(SpaRoot)" Command="npm run build -- --configuration=production" Condition=" '$(BuildServerSideRenderer)' == 'false' " />
 		<Exec WorkingDirectory="$(SpaRoot)" Command="npm run build:ssr" Condition=" '$(BuildServerSideRenderer)' == 'true' " />
 
 		<!-- Include the newly-built files in the publish output -->
 		<ItemGroup>
 			<DistFiles Include="$(SpaRoot)dist\**" />
+			<DistFiles Include="$(SpaRoot)node_modules\**" Condition="'$(BuildServerSideRenderer)' == 'true'" />
 			<ResolvedFileToPublish Include="@(DistFiles->'%(FullPath)')" Exclude="@(ResolvedFileToPublish)">
-				<RelativePath>wwwroot\%(RecursiveDir)%(FileName)%(Extension)</RelativePath>
+				<RelativePath>%(DistFiles.Identity)</RelativePath>
 				<CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
 				<ExcludeFromSingleFile>true</ExcludeFromSingleFile>
 			</ResolvedFileToPublish>
