--- a/src/content/ServerSideRendering/MintPlayer.AspNetCore.ServerSideRendering/ClientApp/angular.json
+++ b/src/content/ServerSideRendering/MintPlayer.AspNetCore.ServerSideRendering/ClientApp/angular.json
@@ -15,12 +15,14 @@
 			"prefix": "app",
 			"architect": {
 				"build": {
-					"builder": "@angular-devkit/build-angular:browser",
+					"builder": "@angular-devkit/build-angular:application",
 					"options": {
 						"outputPath": "dist",
 						"index": "src/index.html",
-						"main": "src/main.ts",
-						"polyfills": "src/polyfills.ts",
+						"browser": "src/main.ts",
+						"polyfills": [
+						  "zone.js"
+						],
 						"tsConfig": "tsconfig.app.json",
 						"inlineStyleLanguage": "scss",
 						"assets": [
@@ -28,7 +30,6 @@
 							"src/assets"
 						],
 						"styles": [
-							"node_modules/@mintplayer/ng-bootstrap/_bootstrap.scss",
 							"src/styles.scss"
 						],
 						"scripts": []
@@ -47,21 +48,12 @@
 									"maximumError": "4kb"
 								}
 							],
-							"fileReplacements": [
-								{
-									"replace": "src/environments/environment.ts",
-									"with": "src/environments/environment.prod.ts"
-								}
-							],
 							"outputHashing": "all"
 						},
 						"development": {
-							"buildOptimizer": false,
 							"optimization": false,
-							"vendorChunk": true,
 							"extractLicenses": false,
-							"sourceMap": true,
-							"namedChunks": true
+							"sourceMap": true
 						}
 					},
 					"defaultConfiguration": "production"
@@ -70,10 +62,10 @@
 					"builder": "@angular-devkit/build-angular:dev-server",
 					"configurations": {
 						"production": {
-							"browserTarget": "ClientApp:build:production"
+							"buildTarget": "ClientApp:build:production"
 						},
 						"development": {
-							"browserTarget": "ClientApp:build:development"
+							"buildTarget": "ClientApp:build:development"
 						}
 					},
 					"defaultConfiguration": "development"
@@ -81,23 +73,24 @@
 				"extract-i18n": {
 					"builder": "@angular-devkit/build-angular:extract-i18n",
 					"options": {
-						"browserTarget": "ClientApp:build"
+						"buildTarget": "ClientApp:build"
 					}
 				},
 				"test": {
 					"builder": "@angular-devkit/build-angular:karma",
 					"options": {
 						"main": "src/test.ts",
-						"polyfills": "src/polyfills.ts",
+						"polyfills": [
+						  "zone.js",
+						  "zone.js/testing"
+						],
 						"tsConfig": "tsconfig.spec.json",
-						"karmaConfig": "karma.conf.js",
 						"inlineStyleLanguage": "scss",
 						"assets": [
 							"src/favicon.ico",
 							"src/assets"
 						],
 						"styles": [
-							"node_modules/@mintplayer/ng-bootstrap/_bootstrap.scss",
 							"src/styles.scss"
 						],
 						"scripts": []
@@ -106,20 +99,14 @@
 				"server": {
 					"builder": "@angular-devkit/build-angular:server",
 					"options": {
-						"outputPath": "dist/ClientApp/server",
+						"outputPath": "dist/browser/server",
 						"main": "src/main.server.ts",
 						"tsConfig": "tsconfig.server.json",
 						"inlineStyleLanguage": "scss"
 					},
 					"configurations": {
 						"production": {
-							"outputHashing": "media",
-							"fileReplacements": [
-								{
-									"replace": "src/environments/environment.ts",
-									"with": "src/environments/environment.prod.ts"
-								}
-							]
+							"outputHashing": "media"
 						},
 						"development": {
 							"optimization": false,
@@ -129,22 +116,8 @@
 					},
 					"defaultConfiguration": "production"
 				},
-				"serve-ssr": {
-					"builder": "@nguniversal/builders:ssr-dev-server",
-					"configurations": {
-						"development": {
-							"browserTarget": "ClientApp:build:development",
-							"serverTarget": "ClientApp:server:development"
-						},
-						"production": {
-							"browserTarget": "ClientApp:build:production",
-							"serverTarget": "ClientApp:server:production"
-						}
-					},
-					"defaultConfiguration": "development"
-				},
 				"prerender": {
-					"builder": "@nguniversal/builders:prerender",
+					"builder": "@angular-devkit/build-angular:prerender",
 					"options": {
 						"routes": [
 							"/"
