--- a/src/content/ServerSideRendering/MintPlayer.AspNetCore.ServerSideRendering/ClientApp/package.json
+++ b/src/content/ServerSideRendering/MintPlayer.AspNetCore.ServerSideRendering/ClientApp/package.json
@@ -2,51 +2,45 @@
 	"name": "client-app",
 	"version": "0.0.0",
 	"scripts": {
-		"ng": "ng",
-		"start": "ng serve",
-		"build": "ng build",
-		"watch": "ng build --watch --configuration development",
-		"test": "ng test",
-		"dev:ssr": "ng run ClientApp:serve-ssr",
-		"serve:ssr": "node dist/ClientApp/server/main.js",
-		"build:ssr": "ng build && ng run ClientApp:server",
-		"prerender": "ng run ClientApp:prerender"
+	  "ng": "ng",
+	  "start": "ng serve",
+	  "build": "ng build",
+	  "watch": "ng build --watch --configuration development",
+	  "test": "ng test",
+	  "dev:ssr": "ng run ClientApp:serve-ssr",
+	  "serve:ssr": "node dist/ClientApp/server/main.js",
+	  "build:ssr": "ng build && ng run ClientApp:server",
+	  "build:ssr:prod": "ng build --configuration=production && ng run ClientApp:server:production",
+	  "prerender": "ng run ClientApp:prerender"
 	},
 	"private": true,
 	"dependencies": {
-		"@angular/animations": "~15.2.0",
-		"@angular/common": "~15.2.0",
-		"@angular/compiler": "~15.2.0",
-		"@angular/core": "~15.2.0",
-		"@angular/forms": "~15.2.0",
-		"@angular/platform-browser": "~15.2.0",
-		"@angular/platform-browser-dynamic": "~15.2.0",
-		"@angular/platform-server": "~15.2.0",
-		"@angular/router": "~15.2.0",
-		"@angular/service-worker": "~15.2.0",
-		"@mintplayer/ng-base-url": "~15.2.0",
-		"@mintplayer/ng-bootstrap": "~15.26.0",
-		"@nguniversal/express-engine": "~15.2.0",
-		"aspnet-prerendering": "^3.0.1",
-		"express": "^4.15.2",
-		"rxjs": "~7.5.0",
-		"tslib": "^2.3.0",
-		"zone.js": "~0.12.0"
+	  "@angular/animations": "~17.1.0",
+	  "@angular/common": "~17.1.0",
+	  "@angular/compiler": "~17.1.0",
+	  "@angular/core": "~17.1.0",
+	  "@angular/forms": "~17.1.0",
+	  "@angular/platform-browser": "~17.1.0",
+	  "@angular/platform-browser-dynamic": "~17.1.0",
+	  "@angular/platform-server": "~17.1.0",
+	  "@angular/router": "~17.1.0",
+	  "@mintplayer/ng-bootstrap": "^17.0.3",
+	  "aspnet-prerendering": "^3.0.1",
+	  "rxjs": "~7.8.0",
+	  "tslib": "^2.3.0",
+	  "zone.js": "~0.14.2"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "~15.2.0",
-		"@angular/cli": "~15.2.0",
-		"@angular/compiler-cli": "~15.2.0",
-		"@nguniversal/builders": "~15.2.0",
-		"@types/express": "^4.17.0",
-		"@types/jasmine": "~4.3.0",
-		"@types/node": "^14.15.0",
-		"jasmine-core": "~4.5.0",
-		"karma": "~6.4.0",
-		"karma-chrome-launcher": "~3.1.1",
-		"karma-coverage": "~2.2.0",
-		"karma-jasmine": "~5.1.0",
-		"karma-jasmine-html-reporter": "~2.0.0",
-		"typescript": "~4.8.2"
+	  "@angular-devkit/build-angular": "~17.1.0",
+	  "@angular/cli": "~17.1.0",
+	  "@angular/compiler-cli": "~17.1.0",
+	  "@types/jasmine": "~5.1.0",
+	  "jasmine-core": "~5.1.0",
+	  "karma": "~6.4.0",
+	  "karma-chrome-launcher": "~3.2.0",
+	  "karma-coverage": "~2.2.0",
+	  "karma-jasmine": "~5.1.0",
+	  "karma-jasmine-html-reporter": "~2.1.0",
+	  "typescript": "~5.2.2"
 	}
-}
+  }
