--- a/src/content/ServerSideRendering/MintPlayer.AspNetCore.ServerSideRendering/ClientApp/tsconfig.server.json
+++ b/src/content/ServerSideRendering/MintPlayer.AspNetCore.ServerSideRendering/ClientApp/tsconfig.server.json
@@ -3,12 +3,13 @@
 	"extends": "./tsconfig.app.json",
 	"compilerOptions": {
 		"outDir": "./out-tsc/server",
-		"module": "commonjs",
+		"module": "CommonJS",
 		"types": [ "node" ]
 	},
 	"files": [
-		"src/main.server.ts",
-		"server.ts",
-		"server.ts"
+		"src/main.server.ts"
+	],
+	"include": [
+		"src/**/*.d.ts"
 	]
 }
