--- a/src/content/Application/Web/ClientApp/package.json.in
+++ b/src/content/Application/Web/ClientApp/package.json.in
@@ -10,61 +10,47 @@
 		"dev:ssr": "ng run ClientApp:serve-ssr",
 		"serve:ssr": "node dist/ClientApp/server/main.js",
 		"build:ssr": "ng build && ng run ClientApp:server:production",
-		"prerender": "ng run ClientApp:prerender",
 //#endif
 		"test": "ng test"
 	},
 	"private": true,
 	"dependencies": {
-		"@angular/animations": "~15.2.0",
-		"@angular/common": "~15.2.0",
-		"@angular/compiler": "~15.2.0",
-		"@angular/core": "~15.2.0",
-		"@angular/forms": "~15.2.0",
-		"@angular/platform-browser": "~15.2.0",
-		"@angular/platform-browser-dynamic": "~15.2.0",
+		"@angular/animations": "^17.2.0",
+		"@angular/common": "^17.2.0",
+		"@angular/compiler": "^17.2.0",
+		"@angular/core": "^17.2.0",
+		"@angular/forms": "^17.2.0",
+		"@angular/platform-browser": "^17.2.0",
+		"@angular/platform-browser-dynamic": "^17.2.0",
 //#if(UseServerSideRendering)
-		"@angular/platform-server": "~15.2.0",
+		"@angular/platform-server": "^17.2.0",
 //#endif
-		"@angular/router": "~15.2.0",
+		"@angular/router": "^17.2.0",
 //#if(UsePwa)
-		"@angular/service-worker": "~15.2.0",
+		"@angular/service-worker": "^17.2.0",
 //#endif
-		"@mintplayer/ng-base-url": "~15.1.0",
-		"@mintplayer/ng-bootstrap": "~15.26.0",
-		"@mintplayer/ng-router": "~15.2.0",
-//#if(UseServerSideRendering)
-		"@nguniversal/express-engine": "~15.2.0",
-//#endif
+		"@mintplayer/ng-bootstrap": "~17.0.0",
+		"@mintplayer/ng-router": "~17.2.0",
 		"@ngxs/store": "~3.8.0",
 //#if(UseServerSideRendering)
 		"aspnet-prerendering": "^3.0.1",
-		"express": "^4.15.2",
 //#endif
 		"guid-typescript": "^1.0.9",
-		"rxjs": "~7.5.0",
-		"rxjs-compat": "~6.6.7",
+		"rxjs": "~7.8.0",
 		"tslib": "^2.3.0",
-		"zone.js": "~0.12.0"
+		"zone.js": "~0.14.3"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "~15.2.0",
-		"@angular/cli": "~15.2.0",
-		"@angular/compiler-cli": "~15.2.0",
-//#if(UseServerSideRendering)
-		"@nguniversal/builders": "~15.2.0",
-		"@types/express": "^4.17.0",
-//#endif
-		"@types/jasmine": "~4.3.0",
-//#if(UseServerSideRendering)
-		"@types/node": "^14.15.0",
-//#endif
-		"jasmine-core": "~4.5.0",
+		"@angular-devkit/build-angular": "^17.2.3",
+		"@angular/cli": "^17.2.3",
+		"@angular/compiler-cli": "^17.2.0",
+		"@types/jasmine": "~5.1.0",
+		"jasmine-core": "~5.1.0",
 		"karma": "~6.4.0",
-		"karma-chrome-launcher": "~3.1.1",
+		"karma-chrome-launcher": "~3.2.0",
 		"karma-coverage": "~2.2.0",
 		"karma-jasmine": "~5.1.0",
-		"karma-jasmine-html-reporter": "~2.0.0",
-		"typescript": "~4.8.2"
+		"karma-jasmine-html-reporter": "~2.1.0",
+		"typescript": "~5.3.2"
 	}
 }
