--- a/src/content/Application/Web/ClientApp/package.json.in
+++ b/src/content/Application/Web/ClientApp/package.json.in
@@ -15,22 +15,22 @@
 	},
 	"private": true,
 	"dependencies": {
-		"@angular/animations": "^17.2.0",
-		"@angular/common": "^17.2.0",
-		"@angular/compiler": "^17.2.0",
-		"@angular/core": "^17.2.0",
-		"@angular/forms": "^17.2.0",
-		"@angular/platform-browser": "^17.2.0",
-		"@angular/platform-browser-dynamic": "^17.2.0",
+		"@angular/animations": "${AngularVersion}",
+		"@angular/common": "${AngularVersion}",
+		"@angular/compiler": "${AngularVersion}",
+		"@angular/core": "${AngularVersion}",
+		"@angular/forms": "${AngularVersion}",
+		"@angular/platform-browser": "${AngularVersion}",
+		"@angular/platform-browser-dynamic": "${AngularVersion}",
 //#if(UseServerSideRendering)
-		"@angular/platform-server": "^17.2.0",
+		"@angular/platform-server": "${AngularVersion}",
 //#endif
-		"@angular/router": "^17.2.0",
+		"@angular/router": "${AngularVersion}",
 //#if(UsePwa)
-		"@angular/service-worker": "^17.2.0",
+		"@angular/service-worker": "${AngularVersion}",
 //#endif
-		"@mintplayer/ng-bootstrap": "~17.0.0",
-		"@mintplayer/ng-router": "~17.2.0",
+		"@mintplayer/ng-bootstrap": "${NgBootstrapVersion}",
+		"@mintplayer/ng-router": "${NgRouterVersion}",
 		"@ngxs/store": "~3.8.0",
 //#if(UseServerSideRendering)
 		"aspnet-prerendering": "^3.0.1",
@@ -41,9 +41,9 @@
 		"zone.js": "~0.14.3"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "^17.2.3",
-		"@angular/cli": "^17.2.3",
-		"@angular/compiler-cli": "^17.2.0",
+		"@angular-devkit/build-angular": "${AngularVersion}",
+		"@angular/cli": "${AngularVersion}",
+		"@angular/compiler-cli": "${AngularVersion}",
 		"@types/jasmine": "~5.1.0",
 		"jasmine-core": "~5.1.0",
 		"karma": "~6.4.0",
