--- a/src/content/Application/Web/ClientApp/angular.json
+++ b/src/content/Application/Web/ClientApp/angular.json
@@ -125,7 +125,7 @@
 						],
 						"scripts": []
 					}
-////#if (UseServerSideRendering)
+////#if (SsrOnSupplyData)
 //			},
 //			"server": {
 //				"builder": "@angular-devkit/build-angular:server",
