--- a/src/MintPlayer.AspNetCore.IdentityServer.Templates.csproj
+++ b/src/MintPlayer.AspNetCore.IdentityServer.Templates.csproj
@@ -7,7 +7,7 @@
 
 		<PackageType>Template</PackageType>
 		<PackageId>MintPlayer.AspNetCore.IdentityServer.Templates</PackageId>
-		<PackageVersion>8.1.0-preview4</PackageVersion>
+		<PackageVersion>8.1.0-preview5</PackageVersion>
 		<Title>IdentityServer templates</Title>
 		<Authors>Pieterjan De Clippel</Authors>
 		<Company>MintPlayer</Company>
@@ -44,6 +44,7 @@
 	  <None Remove="content\NewTemplate\.template.config\ide.host.json" />
 	  <None Remove="content\NewTemplate\.template.config\template.json" />
 	  <None Remove="content\NewTemplate\Program.cs" />
+	  <None Remove="content\NewTemplate\Web\MintPlayer.AspNetCore.Template.Web.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
